tags/v1.0/examples/index.md
<!-- AUTOGENERATED FILE: DO NOT EDIT -->

# {{ site.github.project_tagline }}

## Examples for release/tag v1.0

- [v1.0-base-get-200](v1.0-base-get-200.html)
- [v1.0-bulk-base-get-200](v1.0-bulk-base-get-200.html)
- [v1.0-bulk-post-confirm](v1.0-bulk-post-confirm.html)
- [v1.0-bulk-receiver-stage-patch](v1.0-bulk-receiver-stage-patch.html)
- [v1.0-bulk-sender-stage-post](v1.0-bulk-sender-stage-post.html)
- [v1.0-bulk-stage-fail](v1.0-bulk-stage-fail.html)
- [v1.0-receiver-active-get-200](v1.0-receiver-active-get-200.html)
- [v1.0-receiver-active-get-200-uninit](v1.0-receiver-active-get-200-uninit.html)
- [v1.0-receiver-constraints-get-200-2022-7](v1.0-receiver-constraints-get-200-2022-7.html)
- [v1.0-receiver-constraints-get-200](v1.0-receiver-constraints-get-200.html)
- [v1.0-receiver-get-200](v1.0-receiver-get-200.html)
- [v1.0-receiver-get-200-uninit](v1.0-receiver-get-200-uninit.html)
- [v1.0-receiver-patch-absolute](v1.0-receiver-patch-absolute.html)
- [v1.0-receiver-patch](v1.0-receiver-patch.html)
- [v1.0-receiver-patch-relative](v1.0-receiver-patch-relative.html)
- [v1.0-receiver-patch-transportfile](v1.0-receiver-patch-transportfile.html)
- [v1.0-receiver-pending-get-200](v1.0-receiver-pending-get-200.html)
- [v1.0-receiver-resource-get-200](v1.0-receiver-resource-get-200.html)
- [v1.0-receiver-stage-scheduled-absolute](v1.0-receiver-stage-scheduled-absolute.html)
- [v1.0-receiver-stage-scheduled-relative](v1.0-receiver-stage-scheduled-relative.html)
- [v1.0-receiver-stage-scheduled-transportfile](v1.0-receiver-stage-scheduled-transportfile.html)
- [v1.0-receiver-stage-success](v1.0-receiver-stage-success.html)
- [v1.0-resource-get-200](v1.0-resource-get-200.html)
- [v1.0-resourcelist-get-200](v1.0-resourcelist-get-200.html)
- [v1.0-sender-active-get](v1.0-sender-active-get.html)
- [v1.0-sender-active-get-uninit](v1.0-sender-active-get-uninit.html)
- [v1.0-sender-constraints-get-200-2022-7](v1.0-sender-constraints-get-200-2022-7.html)
- [v1.0-sender-constraints-get-200](v1.0-sender-constraints-get-200.html)
- [v1.0-sender-get-200](v1.0-sender-get-200.html)
- [v1.0-sender-get-200-uninit](v1.0-sender-get-200-uninit.html)
- [v1.0-sender-patch-absolute](v1.0-sender-patch-absolute.html)
- [v1.0-sender-patch](v1.0-sender-patch.html)
- [v1.0-sender-patch-relative](v1.0-sender-patch-relative.html)
- [v1.0-sender-resource-get-200](v1.0-sender-resource-get-200.html)
- [v1.0-single-root](v1.0-single-root.html)
- [v1.0-stage-absolute-success](v1.0-stage-absolute-success.html)
- [v1.0-stage-error](v1.0-stage-error.html)
- [v1.0-stage-fail](v1.0-stage-fail.html)
- [v1.0-stage-relative-success](v1.0-stage-relative-success.html)
- [v1.0-stage-success](v1.0-stage-success.html)
